--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
   <section class="about-columns">
   <div class="about-column">
     <h3>What’s It About?</h3>
-    Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.
+    Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, my personal dream casts, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.
   </div>
   <div class="about-column">
     <h3>Who’s Jenifer?</h3>
-       A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are entirely mine.<br />
+       A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are <em>entirely</em> mine.<br />
        I’m here to say the things no one’s supposed to say out loud, and I do it with precision, not performance.<br />
        The humor isn’t for you. It’s for me.
   </div>
