--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   </div>
   <div class="about-column">
     <h3>Who’s Jenifer?</h3>
-       A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are <em>entirely</em> mine.<br />
+       A writer. A product manager. A gamer with a decades-long MMO habit and a soft spot for complicated characters. Jenifer Jorgenson is a pen name, but the thoughts are entirely mine.<br />
        I’m here to say the things no one’s supposed to say out loud, and I do it with precision, not performance.<br />
        The humor isn’t for you. It’s for me.
   </div>
