--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
   <section class="about-columns">
   <div class="about-column">
     <h3>What’s It About?</h3>
-    Anything and everything... Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, my personal dream casts, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.<br />
+    Pop culture, product thinking, storytelling, technology, society, and the systems that quietly (or not-so-quietly) shape our lives. Also limericks, my personal dream casts, fictional breakdowns, video games, and periodic rants. These aren’t impulsive posts. They’re fully formed opinions wrapped in sarcasm and spiked with sincerity.<br />
     If I've thought about it, it could show up here.
   </div>
   <div class="about-column">
