--- a/snarklevision.html
+++ b/snarklevision.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Snarklevision - Dreamcast Cards</title>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>SNARK FLOATS | Snarklevision Presents...
+  </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
   <link rel="manifest" href="/site.webmanifest">
   <link href="style.css" rel="stylesheet"/>
-</head>
-<body>
+ </head>
+ <body>
+<header class="site-header">
+  <div class="header-inner">
+    <div class="site-title-tagline">
+      <h1 class="site-title"><a href="/index.html">SNARK FLOATS</a></h1>
+      <span class="site-tagline">Sarcasm. Sanity. Survival.</span>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="/posts.html">Snarky Posts</a></li>
+        <li><a href="/about.html">About Snark</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
   <main class="card-container">
     <article class="card dream-cast-card">
-      <div class="badge teal">Snarklevision Presents</div>
+      <div class="badge teal">Snarklevision Presents...</div>
       <h3>Mass Effect <span class="creator">(Bioware)</span></h3>
       <p>The best sci-fi RPG ever made where humanity joins the galactic stage and fights against ancient machine gods. You play Commander Shepard in all three games, and you kick ass. This cast imagines a perfect adaptation of the trilogy.</p>
       <ul class="link-list">
