--- a/snarklevision.html
+++ b/snarklevision.html
@@ -59,5 +59,9 @@
       </ul>
     </article>
   </main>
+    <footer class="site-footer">
+   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
+  </footer>
+ 
 </body>
 </html>
