--- a/snarklevision.html
+++ b/snarklevision.html
@@ -42,20 +42,21 @@
       <h3>Mass Effect <span class="creator">(Bioware)</span></h3>
       <p>The best sci-fi RPG ever made where humanity joins the galactic stage and fights against ancient machine gods. You play Commander Shepard in all three games, and you kick ass. This cast imagines a perfect adaptation of the trilogy.</p>
       <ul class="link-list">
-        <li>🧠 <a href="#">Learn more on Wikipedia</a></li>
-        <li>🕹 <a href="#">Explore Bioware’s games</a></li>
-        <li>🎮 <a href="#">Buy the game on Steam</a></li>
+        <li>🧠 <a href="https://en.wikipedia.org/wiki/Mass_Effect" target="_new">Learn more on Wikipedia</a></li>
+        <li>🕹 <a href="https://www.bioware.com/games/#mass-effect-legendary-edition" target="_new">Explore Bioware’s games</a></li>
+        <li>🎮 <a href="https://store.steampowered.com/app/1328670/Mass_Effect_Legendary_Edition/" target="_new">Buy the games on Steam</a></li>
       </ul>
     </article>
 
 <main class="card-container">
   <article class="card dream-cast-card">
     <div class="badge teal">Snarklevision Presents...</div>
+      <h3>Joe Ledger Series</h3>
       <p>A covert ops thriller meets sci-fi horror rollercoaster. Think cutting-edge bio-terror, zombie plagues, and ancient cults—all in a day’s work for Ledger and his misfit (but badass) crew.</p>
       <ul class="link-list">
-        <li>🧠 <a href="#">Learn more on Wikipedia</a></li>
-        <li>✍️ <a href="#">Explore books by the author</a></li>
-        <li>📖 <a href="#">Buy the books on Amazon</a></li>
+        <li>🧠 <a href="https://en.wikipedia.org/wiki/Joe_Ledger_Series" target="_new">Learn more on Wikipedia</a></li>
+        <li>✍️ <a href="https://www.jonathanmaberry.com/joeledgerseries.cfm" target="_new">Explore books by the author</a></li>
+        <li>📖 <a href="https://www.amazon.com/dp/B0771KF1WC?binding=kindle_edition&searchxofy=true&ref_=dbs_s_aps_series_rwt_tkin&qid=1749854939&sr=8-2" target="_new">Buy the books on Amazon</a></li>
       </ul>
     </article>
   </main>
