--- a/snarklevision.html
+++ b/snarklevision.html
@@ -26,7 +26,7 @@
   </div>
 </header>
   <section class="snarklevision">
-  <h1>SnarkleVision Presents...</h1>
+  <h1 class="intro-heading">SnarkleVision Presents...</h1>
   <div class="snarkle-hero">
     <img src="/images/main/snarklevision_studios.png" alt="SnarkleVision Studios fan cast illustration">
   </div>
