--- a/snarklevision.html
+++ b/snarklevision.html
@@ -34,7 +34,7 @@
     Welcome to the ultimate one-of-a-kind fan-fueled casting couch &mdash; where iconic characters get recast with reckless creativity and alarming accuracy. Below are all the fictional worlds that got the <!-- a href="/tags/snark-floats" --><em>Snark Floats</em><!-- /a --> treatment: bold recasts, clever swaps, and the occasional “you know it’s perfect” pick. Click any title to see the full dream cast breakdown of any of the universes I've snarkified so far.
   </p>
   <hr class="snarkle-divider" />
-  <h2 class="intro-heading">Featured Complete Universes</h2>
+  <h2 align="center">Featured Complete Universes</h2>
 
 <main class="card-container">
   <article class="card dream-cast-card">
