--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/cis-chicken-incident.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>The Cis Chicken Incident: How Political Correctness Murdered My Punchline&mdash;and Almost Killed Empathy Too</h2>
+      <p class="card-date">July 3, 2025</p>
+      <p class="card-excerpt">
+        An everyday work meeting. A dancing cartoon turkey. A dumb pun. I almost typed “cis chicken.” I didn't.<br />
+        Why? Because fear of being misunderstood and labeled a bigot now outweighs the joke. That's what happens when even the silly gets treated like harm and fear overpowers connection.
+      </p>
+    </article>
+  </a>
    <a href="posts/openai-needs-pm-part1.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -60,16 +71,6 @@
       <p class="card-excerpt">
         💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
         The smartest AI won’t win without smart product thinking.
-      </p>
-    </article>
-  </a>
-   <a href="posts/ai-as-companion.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion</h2>
-      <p class="card-date">June 17, 2025</p>
-      <p class="card-excerpt">
-        You’re not using AI wrong. You’re just using it like a smart toaster. If you want results beyond warm output and emoji-laden bulleted lists, treat it like a collaborator. Talk to it. Teach it. Trust it. Then watch what happens...
       </p>
     </article>
   </a>
