--- a/posts.html
+++ b/posts.html
@@ -34,6 +34,17 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/cis-chicken-incident.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>The Cis Chicken Incident: How Political Correctness Murdered My Punchline&mdash;and Almost Killed Empathy Too</h2>
+      <p class="card-date">July 3, 2025</p>
+      <p class="card-excerpt">
+        An everyday work meeting. A dancing cartoon turkey. A dumb pun. I almost typed “cis chicken.” I didn't.<br />
+        Why? Because fear of being misunderstood and labeled a bigot now outweighs the joke. That's what happens when even the silly gets treated like harm and fear overpowers connection.
+      </p>
+    </article>
+  </a>
    <a href="posts/openai-needs-pm-part1.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
