--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/cramps-clamps-chaos.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Cramps, Clamps & Chaos: Why Men Would Nope Out in the Tutorial Level of Womanhood</h2>
+      <p class="card-date">July 12, 2025</p>
+      <p class="card-excerpt">
+       If you’re wondering what it’s like to live on Hard Mode while pretending it’s Easy... Congratulations, you’re probably a man! A woman would already know. This isn’t just life—it’s a full-throttle, hormone-fueled survival sim where your uterus is both the battleground and the final boss. From your first period to your last hot flash, it’s a relentless campaign of blood, sweat, and WTF moments with no pause button and no cheat codes. Congrats. You’re Player Two.<br />
+       The game was designed by Player One.
+      </p>
+    </article>
+  </a>
    <a href="posts/cis-chicken-incident.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
