--- a/posts.html
+++ b/posts.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+  <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>SNARK FLOATS | Snarky Posts
