--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>SNARK FLOATS</title>
   <link href="style.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
  </head>
  <body>
@@ -160,7 +161,7 @@
 }
 .followit--follow-form-container[attr-a][attr-b][attr-c][attr-d][attr-e][attr-f] .powered-by-line {
   color: #231f20 !important;
-  font-family: "Montserrat" !important;
+  font-family: "Montserrat, sans-serif" !important;
   font-size: 13px !important;
   font-weight: 400 !important;
   line-height: 25px !important;
