--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/project-catharsis.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Project Catharsis: How OpenAI Could Turn Frustration Into Function</h2>
+      <p class="card-date">July 13, 2025</p>
+      <p class="card-excerpt">
+       OpenAI needs money. Users need a better way to be heard. Project Catharsis is a feature concept that delivers both. It lets ChatGPT users opt in to share rants (or raves) about the brands they already talk about&mdash;while OpenAI turns that raw, emotional data into high-value insights companies will actually pay for. It’s ethical, scalable, and already halfway happening in chat. All it needs now is a name, a toggle, and a team willing to build it.
+      </p>
+    </article>
+  </a>
    <a href="posts/cramps-clamps-chaos.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -63,28 +73,6 @@
       <p class="card-excerpt">
         An everyday work meeting. A dancing cartoon turkey. A dumb pun. I almost typed “cis chicken.” I didn't.<br />
         Why? Because fear of being misunderstood and labeled a bigot now outweighs the joke. That's what happens when even the silly gets treated like harm and fear overpowers connection.
-      </p>
-    </article>
-  </a>
-   <a href="posts/openai-needs-pm-part1.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>PART 1: Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-      <p class="card-date">June 22, 2025</p>
-      <p class="card-excerpt">
-        ❤️‍🩹 <strong>Part 1: Brilliance Undone: How Bad UX Is Eroding Trust in ChatGPT</strong><br />
-       A love letter from a power user still dazzled by the magical possibility. And devastated by the disappointing execution.
-      </p>
-    </article>
-  </a>
-  <a href="posts/openai-needs-pm-part2.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>PART 2: Genius Tool, Amateur Hour: A Two-Part Series on How OpenAI Is Undervaluing Its Own Creation</h2>
-      <p class="card-date">June 24, 2025</p>
-      <p class="card-excerpt">
-        💡 <strong>Part 2: The Brilliance Is There. Now Build the Product It Deserves.</strong><br />
-        The smartest AI won’t win without smart product thinking.
       </p>
     </article>
   </a>
