--- a/posts.html
+++ b/posts.html
@@ -35,6 +35,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/project-catharsis.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Project Catharsis: How OpenAI Could Turn Frustration Into Function</h2>
+      <p class="card-date">July 13, 2025</p>
+      <p class="card-excerpt">
+       OpenAI needs money. Users need a better way to be heard. Project Catharsis is a feature concept that delivers both. It lets ChatGPT users opt in to share rants (or raves) about the brands they already talk about&mdash;while OpenAI turns that raw, emotional data into high-value insights companies will actually pay for. It’s ethical, scalable, and already halfway happening in chat. All it needs now is a name, a toggle, and a team willing to build it.
+      </p>
+    </article>
+  </a>
    <a href="posts/cramps-clamps-chaos.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
