--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Jenifer Jorgenson">
   <title>SNARK FLOATS</title>
   <link href="style.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
  </head>
