--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>SNARK FLOATS | Snarklevision Presents... Mass Effect</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
   <link href="/style.css" rel="stylesheet"/>
   <style>
