--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>SNARK FLOATS</title>
   <link href="style.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
  </head>
  <body>
