--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>SNARK FLOATS | Snarky Posts
   </title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
   <link href="style.css" rel="stylesheet"/>
  </head>
