--- a/snarklevision/mass-effect-cast.html
+++ b/snarklevision/mass-effect-cast.html
@@ -41,7 +41,7 @@
     <h1>Snarklevision Presents... <span class="title-highlight">The Mass Effect Dream Cast</span></h1>
   </section>
   <section class="dreamcast-section">
-    <h2>Main Characters</h2>
+    <h2 id="main-characters">Main Characters</h2>
     <article class="cast-entry">
       <h3>Commander Shepard – <span class="actor-name">Dichen Lachman</span></h3>
       <p>Commanding, emotionally layered, quietly devastating presence. Hot as hell.<br>Because my Shepard is ALWAYS female. Sorry dudes.</p>
@@ -150,9 +150,9 @@
       <h3>Javik – <span class="actor-name">Nonso Anozie</span></h3>
       <p>Ancient strength, commanding presence, disdain turned alliance. Anozie's deep voice, accent and presence seem perfection for this role.</p>
     </article>    
+    
 <hr>
-    <h2>ME1 Supporting Characters</h2>
-
+    <h2 id="me1-support-cast">ME1 Supporting Cast</h2>
     <article class="cast-entry">
        <h3>Dr. Chloe Michel – <span class="actor-name">Mélanie Laurent</span></h3>
        <p>Calm, competent, trusted. The Normandy’s medbay is in excellent hands if Dr. Chakwas isn't available for... some reason.</p>
@@ -207,9 +207,7 @@
     </article>    
 
     <hr>
-
-        <h2>ME2 Supporting Characters</h2>
-
+        <h2 id="me2-support-cast">ME2 Supporting Cast</h2>
     <article class="cast-entry">
       <h3>Shadow Broker – <span class="actor-name">Djimon Hounsou</span></h3>
       <p>Towering power cloaked in silence and strategy. And that voice...</p>
@@ -292,9 +290,7 @@
     </article>     
 
     <hr>
-
-        <h2>ME3 Supporting Characters</h2>
-
+        <h2 id="me3-support-cast">ME3 Supporting Cast</h2>
     <article class="cast-entry">
       <h3>Steve Cortez – <span class="actor-name">Harry Shum Jr.</span></h3>
       <p>Grounded, grieving, kind. His strength is visible even in his quietness.</p>
@@ -363,10 +359,10 @@
       <h3>Javik – <span class="actor-name">Nonso Anozie</span></h3>
       <p>Ancient strength, commanding presence, disdain turned alliance. Anozie's deep voice, accent and presence seem perfection for this role.</p>
     </article -->
-    
   </section>
 </main>
 <p class="back-to-posts">
+<a href="mass-effect.html">← Back to Mass Effect Dreamcast Intro</a><br />
 <a href="../snarklevision.html">← Back to Snarklevision Presents...</a>
 </p>
 <footer>
