--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -59,10 +59,10 @@
     <p>It matters. Because one of the best things about ME is how layered and complex so many of the characters really are. I wanted to honor that.</p>
     <p>I broke the whole thing into four sections.</p>
     <ul>
-      <li> <strong>Main Characters:</strong> these are people we got to know well as companions, often in more than one game</li>
-      <li><strong>ME1 Supporting Cast:</strong> characters who appeared first or mainly in the first game</li>
-      <li><strong>ME2 Supporting Cast:</strong> showed up first or mainly in the second game</li>
-      <li><strong>ME3 Supporting Cast:</strong> you guessed it... they showed up in the third game</li>
+      <li> <strong>Main Characters:</strong> these are people we got to know well as companions or recurring enemies, often in more than one game</li>
+      <li><strong>ME1 Supporting Cast:</strong> characters who appeared first or mainly in the first game but aren't really main characters</li>
+      <li><strong>ME2 Supporting Cast:</strong> showed up first or mainly in the second game but aren't really main characters</li>
+      <li><strong>ME3 Supporting Cast:</strong> you guessed it... they showed up in the third game but aren't really main characters</li>
     </ul>
     <h2>The Relay Awaits...</h2>
     <p>So welcome to Snarklevision’s Mass Effect Dream Cast. Buckle up. Bring snacks. And prepare to argue with me in the comments, because I am right, but I welcome your incorrect opinions anyway. 😏</p>
