--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -37,8 +37,8 @@
 </header>
 <main class="dreamcast-page">
   <section class="dreamcast-hero">
-    <img src="/images/mass-effect-dreamcast-hero.jpg" alt="Mass Effect Dreamcast Hero">
     <h1>Snarklevision Presents... <span class="title-highlight">The Mass Effect Dream Cast</span></h1>
+    <img src="/images/snarklevision/mass-effect-dreamcast.png" alt="Mass Effect Dreamcast Hero Image">
   </section>
 
   <section class="dreamcast-intro">
