--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 </header>
 <section class="contact-section">
  <div class="contact-intro">
-   <img src="images/main/snarkmail.png" alt="Talk Snarky to Me art" />
+   <img src="images/main/snarkmail.png" alt="Talk Snarky to Me hero image - a bunch of different mouths yapping" />
   <div class="contact-text">
 <h2>Talk Snarky to Me!</h2>
 <p>Engage with my posts and share your thoughts. I don't shy away from criticism.<br />
