--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
  <head>
   <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
+  <meta name="description" content="Snark Floats: A blog where sarcasm, sanity, and survival intersect—whether we're talking tech, identity, writing, or existential nonsense." />
+
+<meta property="og:title" content="Snark Floats" />
+<meta property="og:description" content="A blog where sarcasm, sanity, and survival intersect—whether we're talking tech, identity, writing, or existential nonsense." />
+<meta property="og:url" content="https://www.snarkfloats.com/index.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Snark Floats" />
+<meta name="twitter:description" content="A blog where sarcasm, sanity, and survival intersect—whether we're talking tech, identity, writing, or existential nonsense." />
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta name="author" content="Jenifer Jorgenson">
