--- a/posts.html
+++ b/posts.html
@@ -2,8 +2,22 @@
 <html lang="en">
  <head>
   <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
+  <meta name="description" content="Browse all posts from Snark Floats—a blog where sarcasm, sanity, and survival intersect through tech, identity, rants, and revelations." />
+
+<meta property="og:title" content="Snark Floats Blog Posts" />
+<meta property="og:description" content="Browse all posts from Snark Floats—a blog where sarcasm, sanity, and survival intersect through tech, identity, rants, and revelations." />
+<meta property="og:url" content="https://www.snarkfloats.com/posts.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Snark Floats Blog Posts" />
+<meta name="twitter:description" content="Browse all posts from Snark Floats—a blog where sarcasm, sanity, and survival intersect through tech, identity, rants, and revelations." />
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="author" content="Jenifer Jorgenson">
   <title>SNARK FLOATS | Snarky Posts
   </title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
