--- a/about.html
+++ b/about.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+  <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
+<meta name="description" content="Meet the snark behind Snark Floats. Learn why this site exists, who’s writing it, and what sarcasm-fueled nonsense you’ve stumbled into." />
+
+<meta property="og:title" content="About Snark Floats" />
+<meta property="og:description" content="Meet the snark behind Snark Floats. Learn why this site exists, who’s writing it, and what sarcasm-fueled nonsense you’ve stumbled into." />
+<meta property="og:url" content="https://www.snarkfloats.com/about.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="About Snark Floats" />
+<meta name="twitter:description" content="Meet the snark behind Snark Floats. Learn why this site exists, who’s writing it, and what sarcasm-fueled nonsense you’ve stumbled into." />
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="author" content="Jenifer Jorgenson">
   <title>SNARK FLOATS | About Snark Floats
   </title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
