--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+  <meta name="description" content="Got feedback, fan mail, or a burning desire to yell at me? Here's how to contact the mind behind Snark Floats." />
+
+<meta property="og:title" content="Contact Snark Floats" />
+<meta property="og:description" content="Got feedback, fan mail, or a burning desire to yell at me? Here's how to contact the mind behind Snark Floats." />
+<meta property="og:url" content="https://www.snarkfloats.com/contact.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Contact Snark Floats" />
+<meta name="twitter:description" content="Got feedback, fan mail, or a burning desire to yell at me? Here's how to contact the mind behind Snark Floats." />
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>SNARK FLOATS | Send Your Snark
