--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="author" content="Jenifer Jorgenson">
   <title>SNARK FLOATS | Send Your Snark
   </title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
