--- a/snarklevision.html
+++ b/snarklevision.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+  <meta name="description" content="Where headcanon becomes headline. Snarklevision is your gateway to unhinged dreamcasts, reboots, and fandom-fueled madness." />
+
+<meta property="og:title" content="Snarklevision: Dreamcasts & Reboots" />
+<meta property="og:description" content="Where headcanon becomes headline. Snarklevision is your gateway to unhinged dreamcasts, reboots, and fandom-fueled madness." />
+<meta property="og:url" content="https://www.snarkfloats.com/snarklevision.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Snarklevision: Dreamcasts & Reboots" />
+<meta name="twitter:description" content="Where headcanon becomes headline. Snarklevision is your gateway to unhinged dreamcasts, reboots, and fandom-fueled madness." />
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snark_floats_banner.webp" />
+
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="author" content="Jenifer Jorgenson">
   <title>SNARK FLOATS | Snarklevision Presents...
   </title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
