--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -46,7 +46,7 @@
     <p>So naturally, the second I heard they were making a live-action adaptation, I started <em>panicking.</em> Not in an excited way. In the "oh no, they’re going to ruin everything and make Kaidan a leather-jacketed tech bro with three lines per episode" kind of way. Because let’s be real: adaptations get it wrong approximately 9.9 times out of 10, and Mass Effect is just too damn important to trust to the chaos monkeys in Hollywood.</p>
     <p>That’s where this list comes in.</p>
     <p>This is my dream cast &mdash; a full, heartfelt, possibly obsessive reimagining of who should be part of a Mass Effect TV series. Not a movie. Not a miniseries. A full-blown, sprawling, multi-season epic with enough time to unpack every heartbreak, loyalty mission, and awkward space flirtation. These actors aren’t just stunt casting; they’re chosen because they get the vibe, the nuance, and the soul of this franchise.</p>
-    <p>And yes, I cast every major role from ME1 through ME3, plus DLCs. (And a few random walk-ons I happen to like.) Because anything worth doing is worth overdoing.</p>
+    <p>And yes, I cast every major role from ME1 through ME3, plus DLCs. (And a few random walk-ons I happen to like.) Because anything worth doing is worth overdoing.<br /></p>
     <hr />
     <h2>The Rules</h2>
     <p>I gave myself just three rules when I started this project. Okay, that's a lie. I started with more. I gave myself three that I stuck with!</p>
@@ -67,7 +67,7 @@
     </ul>
     <hr />
     <h2>The Relay Awaits...</h2>
-    <p>So welcome to Snarklevision’s Mass Effect Dream Cast. Buckle up. Bring snacks. And prepare to argue with me in the comments, because I am right, but I welcome your incorrect opinions anyway. 😏</p>
+    <p>So welcome to Snarklevision’s Mass Effect Dream Cast. Buckle up. Bring snacks. And prepare to argue with me in the comments, because I am right, but I welcome your incorrect opinions anyway.😏</p>
       <ul>
         <li><a href="mass-effect-cast.html#main-characters">Main Characters</a></li>
         <li><a href="mass-effect-cast.html#me1-support-cast">Mass Effect 1 Supporting Cast</a></li>
