--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -37,7 +37,8 @@
 </header>
 <main class="dreamcast-page">
   <section class="dreamcast-hero">
-    <h1>Snarklevision Presents... <span class="title-highlight">The Mass Effect Dream Cast</span></h1>
+    <h1>Snarklevision Presents...</h1> 
+    <h2><span class="title-highlight">The Mass Effect Dream Cast</span></h2>
     <img src="/images/snarklevision/mass-effect-dreamcast.png" alt="Mass Effect Dreamcast Hero Image">
   </section>
 
