--- a/snarklevision/mass-effect-cast.html
+++ b/snarklevision/mass-effect-cast.html
@@ -37,11 +37,12 @@
 </header>
 <main class="dreamcast-page">
   <section class="dreamcast-hero">
-    <img src="/images/mass-effect-dreamcast-hero.jpg" alt="Mass Effect Dreamcast Hero">
-    <h1>Snarklevision Presents... <span class="title-highlight">The Mass Effect Dream Cast</span></h1>
+    <!-- img src="/images/mass-effect-dreamcast-hero.jpg" alt="Mass Effect Dreamcast Hero" -->
+    <h1 id="main-characters">Snarklevision Presents...</h1>
+    <h2><span class="title-highlight">The Mass Effect Dream Cast</span></h2>
   </section>
   <section class="dreamcast-section">
-    <h2 id="main-characters">Main Characters</h2>
+    <h2>Main Characters</h2>
     <article class="cast-entry">
       <h3>Commander Shepard – <span class="actor-name">Dichen Lachman</span></h3>
       <p>Commanding, emotionally layered, quietly devastating presence. Hot as hell.<br>Because my Shepard is ALWAYS female. Sorry dudes.</p>
