--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -70,10 +70,10 @@
     <h2>The Relay Awaits...</h2>
     <p>So welcome to Snarklevision’s Mass Effect Dream Cast. Buckle up. Bring snacks. And prepare to argue with me in the comments, because I am right, but I welcome your incorrect opinions anyway.😏</p>
 <div class="cast-links">
-       🎭 <a href="mass-effect-cast.html#main-characters">Main Characters</a><br />
-        🎥 <a href="mass-effect-cast.html#me1-support-cast">Mass Effect 1 Supporting Cast</a><br />
-        🎞️ <a href="mass-effect-cast.html#me2-support-cast">Mass Effect 2 Supporting Cast</a><br />
-        🎬 <a href="mass-effect-cast.html#me3-support-cast">Mass Effect 3 Supporting Cast</a>
+        <a href="mass-effect-cast.html#main-characters">🎭 Main Characters</a>
+        <a href="mass-effect-cast.html#me1-support-cast">🎥 Mass Effect 1 Supporting Cast</a>
+        <a href="mass-effect-cast.html#me2-support-cast">🎞️ Mass Effect 2 Supporting Cast</a>
+        <a href="mass-effect-cast.html#me3-support-cast">🎬 Mass Effect 3 Supporting Cast</a>
 </div>
   </section>
 </main>
