--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
+
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="author" content="Jenifer Jorgenson">
 <title>SNARK FLOATS | Snarklevision Presents... Mass Effect</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
