--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
   <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
+<meta name="description" content="A snarky reboot of Mass Effect’s cast—bold choices, deep cuts, and zero apologies. Buckle up, it's time for a dreamcast.">
+
+  <meta property="og:title" content="Mass Effect Dreamcast: Recasting a Classic">
+<meta property="og:description" content="A snarky reboot of Mass Effect’s cast—bold choices, deep cuts, and zero apologies. Buckle up, it's time for a dreamcast.">
+<meta property="og:url" content="https://www.snarkfloats.com/snarklevision/mass-effect.html">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Mass Effect Dreamcast: Recasting a Classic">
+<meta name="twitter:description" content="A snarky reboot of Mass Effect’s cast—bold choices, deep cuts, and zero apologies. Buckle up, it's time for a dreamcast.">
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.png">
 
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
