--- a/snarklevision/mass-effect-cast.html
+++ b/snarklevision/mass-effect-cast.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
+<meta name="description" content="Who should play Shepard? What about Wrex, Liara, or Jack? See the full Snark Floats dreamcast and cast your own vote (internally, for now).">
+
+  <meta property="og:title" content="Mass Effect Dreamcast: Recasting a Classic">
+<meta property="og:description" content="Who should play Shepard? What about Wrex, Liara, or Jack? See the full Snark Floats dreamcast and cast your own vote (internally, for now).">
+<meta property="og:url" content="https://www.snarkfloats.com/snarklevision/mass-effect-cast.html">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.webp">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Mass Effect Dreamcast: Recasting a Classic">
+<meta name="twitter:description" content="Who should play Shepard? What about Wrex, Liara, or Jack? See the full Snark Floats dreamcast and cast your own vote (internally, for now).">
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.webp">
+
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="author" content="Jenifer Jorgenson">
 <title>SNARK FLOATS | Snarklevision Presents... Mass Effect</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="manifest" href="/site.webmanifest">
