--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Mass Effect Dreamcast: Recasting a Classic">
 <meta property="og:description" content="A snarky reboot of Mass Effect’s cast—bold choices, deep cuts, and zero apologies. Buckle up, it's time for a dreamcast.">
 <meta property="og:url" content="https://www.snarkfloats.com/snarklevision/mass-effect.html">
-<meta property="og:type" content="website">
+<meta property="og:type" content="article">
 <meta property="og:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.webp">
 
 <meta name="twitter:card" content="summary_large_image">
