--- a/snarklevision/mass-effect-cast.html
+++ b/snarklevision/mass-effect-cast.html
@@ -4,16 +4,16 @@
   <link rel="alternate" type="application/rss+xml" title="Snark Floats RSS Feed" href="https://www.snarkfloats.com/rss.xml" />
 <meta name="description" content="Who should play Shepard? What about Wrex, Liara, or Jack? See the full Snark Floats dreamcast and cast your own vote (internally, for now).">
 
-  <meta property="og:title" content="Mass Effect Dreamcast: Recasting a Classic">
+  <meta property="og:title" content="Casting Shepard, Wrex, and the Whole Damn Crew">
 <meta property="og:description" content="Who should play Shepard? What about Wrex, Liara, or Jack? See the full Snark Floats dreamcast and cast your own vote (internally, for now).">
 <meta property="og:url" content="https://www.snarkfloats.com/snarklevision/mass-effect-cast.html">
 <meta property="og:type" content="article">
-<meta property="og:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.webp">
+<meta property="og:image" content="https://www.snarkfloats.com/images/snarklevision/mass-effect-dreamcast.webp">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Mass Effect Dreamcast: Recasting a Classic">
+<meta name="twitter:title" content="Casting Shepard, Wrex, and the Whole Damn Crew">
 <meta name="twitter:description" content="Who should play Shepard? What about Wrex, Liara, or Jack? See the full Snark Floats dreamcast and cast your own vote (internally, for now).">
-<meta name="twitter:image" content="https://www.snarkfloats.com/images/main/snarklevision_studios.webp">
+<meta name="twitter:image" content="https://www.snarkfloats.com/images/snarklevision/mass-effect-dreamcast.webp">
 
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
