--- a/snarklevision/mass-effect.html
+++ b/snarklevision/mass-effect.html
@@ -54,7 +54,7 @@
   <section class="dreamcast-hero">
     <h1>Snarklevision Presents...</h1> 
     <h2><span class="title-highlight">The Mass Effect Dream Cast</span></h2>
-    <img src="/images/snarklevision/mass-effect-dreamcast.png" alt="Mass Effect Dreamcast Hero Image">
+    <img src="/images/snarklevision/mass-effect-dreamcast.png" alt="Some of the crew just sitting around in an animated Normandy">
   </section>
 
   <section class="dreamcast-intro">
