--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/broken-system.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>The System Isn’t Broken &mdash; It’s Just Designed to Screw You</h2>
+      <p class="card-date">July 14, 2025</p>
+      <p class="card-excerpt">
+       I just wanted to get online and do my job. What followed was a perfect cascade of failure &mdash; from my ISP to my phone carrier to my employer’s trustless IT policies. This isn’t broken infrastructure. It’s working <em>exactly</em> as designed.
+      </p>
+    </article>
+  </a>
    <a href="posts/project-catharsis.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
