--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/broken-design-silent.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Broken by Design. Silenced by Intent.</h2>
+      <p class="card-date">July 17, 2025</p>
+      <p class="card-excerpt">
+       To a platform like LinkedIn, not conforming reads as nonexistence. If you don’t match the pattern, you’re not a person.
+      </p>
+    </article>
+  </a>
    <a href="posts/broken-system.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
