--- a/posts.html
+++ b/posts.html
@@ -55,7 +55,7 @@
       <h2>Broken by Design. Silenced by Intent.</h2>
       <p class="card-date">July 17, 2025</p>
       <p class="card-excerpt">
-       To a platform like LinkedIn, not conforming reads as nonexistence. If you don’t match the pattern, you’re not a person.
+       What happens when you critique the system under a pseudonym? LinkedIn made sure I found out. A case study in platform control and algorithmic silencing.
       </p>
     </article>
   </a>
