--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/broken-design-silent.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Broken by Design. Silenced by Intent.</h2>
+      <p class="card-date">July 17, 2025</p>
+      <p class="card-excerpt">
+       What happens when you critique the system under a pseudonym? LinkedIn made sure I found out. A case study in platform control and algorithmic silencing.
+      </p>
+    </article>
+  </a>
    <a href="posts/broken-system.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -85,17 +95,6 @@
       <p class="card-excerpt">
        If you’re wondering what it’s like to live on Hard Mode while pretending it’s Easy... Congratulations, you’re probably a man! A woman would already know. This isn’t just life—it’s a full-throttle, hormone-fueled survival sim where your uterus is both the battleground and the final boss. From your first period to your last hot flash, it’s a relentless campaign of blood, sweat, and WTF moments with no pause button and no cheat codes. Congrats. You’re Player Two.<br />
        The game was designed by Player One.
-      </p>
-    </article>
-  </a>
-   <a href="posts/cis-chicken-incident.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>The Cis Chicken Incident: How Political Correctness Murdered My Punchline &mdash; and Almost Killed Empathy Too</h2>
-      <p class="card-date">July 3, 2025</p>
-      <p class="card-excerpt">
-        An everyday work meeting. A dancing cartoon turkey. A dumb pun. I almost typed “cis chicken.” I didn't.<br />
-        Why? Because fear of being misunderstood and labeled a bigot now outweighs the joke. That's what happens when even the silly gets treated like harm and fear overpowers connection.
       </p>
     </article>
   </a>
