--- a/posts.html
+++ b/posts.html
@@ -45,10 +45,20 @@
     Snarky Posts
    </h2>
    <p>
-    I post when the mood strikes—usually when the snark is strong and the nonsense is louder than usual.
+    I post when the mood strikes &mdash; usually when the snark is strong and the nonsense is louder than usual. Or when I just need to rant.
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/working-as-intended.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Working as Intended. Broken Anyway.</h2>
+      <p class="card-date">July 18, 2025</p>
+      <p class="card-excerpt">
+       Part 3 of a reluctant trilogy about modern systems and the humans they grind down.
+      </p>
+    </article>
+  </a>
    <a href="posts/broken-design-silent.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
