--- a/posts.html
+++ b/posts.html
@@ -55,7 +55,7 @@
       <h2>Working as Intended. Broken Anyway.</h2>
       <p class="card-date">July 18, 2025</p>
       <p class="card-excerpt">
-       Part 3 of a reluctant trilogy about modern systems and the humans they grind down.
+       Part 3 of a reluctant trilogy about modern systems and the humans they grind down. The personal cost of being trapped by the system.
       </p>
     </article>
   </a>
