--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/working-as-intended.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Working as Intended. Broken Anyway.</h2>
+      <p class="card-date">July 18, 2025</p>
+      <p class="card-excerpt">
+       Part 3 of a reluctant trilogy about modern systems and the humans they grind down. The personal cost of being trapped by the system.
+      </p>
+    </article>
+  </a>
    <a href="posts/broken-design-silent.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
@@ -84,17 +94,6 @@
       <p class="card-date">July 13, 2025</p>
       <p class="card-excerpt">
        OpenAI needs money. Users need a better way to be heard. Project Catharsis is a feature concept that delivers both. It lets ChatGPT users opt in to share rants (or raves) about the brands they already talk about &mdash; while OpenAI turns that raw, emotional data into high-value insights companies will actually pay for. It’s ethical, scalable, and already halfway happening in chat. All it needs now is a name, a toggle, and a team willing to build it.
-      </p>
-    </article>
-  </a>
-   <a href="posts/cramps-clamps-chaos.html" class="card-link">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Cramps, Clamps & Chaos: Why Men Would Nope Out in the Tutorial Level of Womanhood</h2>
-      <p class="card-date">July 12, 2025</p>
-      <p class="card-excerpt">
-       If you’re wondering what it’s like to live on Hard Mode while pretending it’s Easy... Congratulations, you’re probably a man! A woman would already know. This isn’t just life—it’s a full-throttle, hormone-fueled survival sim where your uterus is both the battleground and the final boss. From your first period to your last hot flash, it’s a relentless campaign of blood, sweat, and WTF moments with no pause button and no cheat codes. Congrats. You’re Player Two.<br />
-       The game was designed by Player One.
       </p>
     </article>
   </a>
