--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
    <a href="posts/working-as-intended.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
-      <h2>Working as Intended. Broken Anyway.</h2>
+      <h2>Still Working as Intended. More Broken Than Ever.</h2>
       <p class="card-date">July 18, 2025</p>
       <p class="card-excerpt">
        Part 3 of a reluctant trilogy about modern systems and the humans they grind down. The personal cost of being trapped by the system.
