--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h2>Still Working as Intended. More Broken Than Ever.</h2>
       <p class="card-date">July 18, 2025</p>
       <p class="card-excerpt">
-       Part 3 of a reluctant trilogy about modern systems and the humans they grind down. The personal cost of being trapped by the system.
+       Part 3 of a reluctant trilogy about modern systems and the humans they grind down. And the personal cost of being trapped by the system.
       </p>
     </article>
   </a>
