--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,16 @@
    </p>
   </section>
   <main class="card-container">
+   <a href="posts/the-skinny.html" class="card-link">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>⚖️ The Skinny: How DEI Leaves Out the Most Visible People</h2>
+      <p class="card-date">July 21, 2025</p>
+      <p class="card-excerpt">
+       DEI talks the talk, but fat folks still walk alone &mdash; ignored, excluded, and judged. The most visible people in the room remain invisible to the movement.
+      </p>
+    </article>
+  </a>
    <a href="posts/working-as-intended.html" class="card-link">
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
